[gd_scene load_steps=2 format=3 uid="uid://c36a581idwf5t"]

[ext_resource type="Script" uid="uid://c3iteawy1qvpy" path="res://menu.gd" id="1_lti8b"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.5
offset_top = -168.5
offset_right = 231.5
offset_bottom = 168.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NewGame" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "New Game"

[node name="Level Select" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Level Select"

[node name="Settings" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Settings"

[node name="ExitGame" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Level Select" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
